--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mailchimp/marketing": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
